--- a/JavaScript/04-BlurryLoading/style.css
+++ b/JavaScript/04-BlurryLoading/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu");
 
 * {
   box-sizing: border-box;
@@ -16,5 +16,18 @@ body {
 
 .bg {
   background: url("https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80")
-    none repeat center center/cover;
+    no-repeat center center/cover;
+
+  position: absolute;
+  top: -30;
+  left: -30;
+  width: calc(100vw + 60px);
+  height: calc(100vh + 60px);
+  z-index: -1;
+  filter: blur(0px);
+}
+
+.loading-text {
+  font-size: 50px;
+  color: #fff;
 }
