--- a/JavaScript/08-SearchFilter/style.css
+++ b/JavaScript/08-SearchFilter/style.css
@@ -20,6 +20,9 @@ body {
 
 #search-container {
   margin: 1em 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #search-container input {
@@ -42,6 +45,13 @@ body {
   border-radius: 5px;
   margin-top: 0.5em;
   cursor: pointer;
+}
+
+#buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
 .button-value {
